--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 certifi==2022.9.24
 charset-normalizer==2.1.1
 Django==4.0.4
@@ -10,3 +10,5 @@ requests==2.28.1
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.12
+
+python-dotenv==0.21.0
